force-app/main/default/objects/InsurancePolicy/fields/DSALES_Activodeplizadeseguro__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Activodeplizadeseguro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activo de póliza de seguro</label>
    <referenceTo>InsurancePolicyAsset</referenceTo>
    <relationshipLabel>Pólizas</relationshipLabel>
    <relationshipName>P_lizas</relationshipName>
    <type>Lookup</type>
</CustomField>