force-app/main/default/objects/InsurancePolicy/fields/DSALES_Armadora_c__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Armadora_c__c</fullName>
    <label>Armadora</label>
    <length>20</length>
    <type>Text</type>
</CustomField>