force-app/main/default/objects/InsurancePolicy/fields/DSALES_Asegurado__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Asegurado__c</fullName>
    <formula>NameInsured.FirstName &amp; &quot; &quot; &amp; NameInsured.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asegurado</label>
    <type>Text</type>
</CustomField>