force-app/main/default/objects/InsurancePolicy/fields/DSALES_ClaveAMIS__c.field-meta.xml
<CustomField>
    <fullName>DSALES_ClaveAMIS__c</fullName>
    <label>Clave AMIS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>