force-app/main/default/objects/InsurancePolicy/fields/DSALES_Clavevehicular__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Clavevehicular__c</fullName>
    <description>Campo par la clave del vehículo</description>
    <label>Clave vehicular</label>
    <length>15</length>
    <type>Text</type>
</CustomField>