force-app/main/default/objects/InsurancePolicy/fields/DSALES_Cobertura__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Cobertura__c</fullName>
    <formula>TEXT(SourceQuote.DSALES_Cobertura__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cobertura</label>
    <type>Text</type>
</CustomField>