force-app/main/default/objects/InsurancePolicy/fields/DSALES_Codigocolonia__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Codigocolonia__c</fullName>
    <formula>SourceQuote.DSALES_Suburbcode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código de la colonia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>