force-app/main/default/objects/InsurancePolicy/fields/DSALES_Codigoestado__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Codigoestado__c</fullName>
    <formula>TEXT(SourceQuote.DSALES_Cdigodeestado__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código de estado</label>
    <type>Text</type>
</CustomField>