force-app/main/default/objects/InsurancePolicy/fields/DSALES_Codigomunicipio__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Codigomunicipio__c</fullName>
    <formula>SourceQuote.DSALES_Cdigodemunicipio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código de municipio</label>
    <type>Text</type>
</CustomField>