force-app/main/default/objects/InsurancePolicy/fields/DSALES_Codigopostal__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Codigopostal__c</fullName>
    <formula>SourceQuote.DSALES_Cdigopostal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código postal</label>
    <type>Text</type>
</CustomField>