force-app/main/default/objects/InsurancePolicy/fields/DSALES_Correo_electr_nico__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Correo_electr_nico__c</fullName>
    <label>Correo electrónico</label>
    <type>Email</type>
</CustomField>