force-app/main/default/objects/InsurancePolicy/fields/DSALES_CorreoElectronico__c.field-meta.xml
<CustomField>
    <fullName>DSALES_CorreoElectronico__c</fullName>
    <label>Correo electrónico</label>
    <type>Email</type>
</CustomField>