force-app/main/default/objects/InsurancePolicy/fields/DSALES_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Descripcion__c</fullName>
    <label>Descripción</label>
    <length>20</length>
    <type>Text</type>
</CustomField>