force-app/main/default/objects/InsurancePolicy/fields/DSALES_Estatusdepliza__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Estatusdepliza__c</fullName>
    <description>Campo para revisar en que estatus se encuentra la póliza</description>
    <label>Estatus de póliza</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vigente</fullName>
            </value>
            <value>
                <fullName>Vencida</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>