force-app/main/default/objects/InsurancePolicy/fields/DSALES_Fechanacimiento__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Fechanacimiento__c</fullName>
    <formula>SourceQuote.DSALES_Fechadenacimiento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de nacimiento</label>
    <type>Date</type>
</CustomField>