force-app/main/default/objects/InsurancePolicy/fields/DSALES_Gastos_expedicion__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Gastos_expedicion__c</fullName>
    <label>Gastos de expedición</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>