force-app/main/default/objects/InsurancePolicy/fields/DSALES_IDemision__c.field-meta.xml
<CustomField>
    <fullName>DSALES_IDemision__c</fullName>
    <label>ID emisión</label>
    <length>50</length>
    <type>Text</type>
</CustomField>