force-app/main/default/objects/InsurancePolicy/fields/DSALES_IVA__c.field-meta.xml
<CustomField>
    <fullName>DSALES_IVA__c</fullName>
    <label>IVA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>