force-app/main/default/objects/InsurancePolicy/fields/DSALES_Marca__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Marca__c</fullName>
    <label>Marca</label>
    <length>50</length>
    <type>Text</type>
</CustomField>