force-app/main/default/objects/InsurancePolicy/fields/DSALES_Modelo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Modelo__c</fullName>
    <description>Campo para ingresar el modelo del vehículo</description>
    <label>Modelo</label>
    <length>25</length>
    <type>Text</type>
</CustomField>