force-app/main/default/objects/InsurancePolicy/fields/DSALES_Negocio__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Negocio__c</fullName>
    <formula>TEXT(SourceQuote.DSALES_Negocio__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Negocio</label>
    <type>Text</type>
</CustomField>