force-app/main/default/objects/InsurancePolicy/fields/DSALES_Nmerodemotor__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Nmerodemotor__c</fullName>
    <description>Campo para ingresar el número de motor</description>
    <label>Número de motor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>