force-app/main/default/objects/InsurancePolicy/fields/DSALES_Numeroseguimiento__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Numeroseguimiento__c</fullName>
    <label>Número de seguimiento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>