force-app/main/default/objects/InsurancePolicy/fields/DSALES_Numeroserie__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Numeroserie__c</fullName>
    <description>Campo para ingresar el numero de serie del vehículo</description>
    <label>Número de serie</label>
    <length>20</length>
    <type>Text</type>
</CustomField>