force-app/main/default/objects/InsurancePolicy/fields/DSALES_Opcionpago__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Opcionpago__c</fullName>
    <formula>TEXT(SourceQuote.DSALES_Opcindepago__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opción de pago</label>
    <type>Text</type>
</CustomField>