force-app/main/default/objects/InsurancePolicy/fields/DSALES_PDF_poliza__c.field-meta.xml
<CustomField>
    <fullName>DSALES_PDF_poliza__c</fullName>
    <label>PDF póliza</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>