force-app/main/default/objects/InsurancePolicy/fields/DSALES_PDFpoliza__c.field-meta.xml
<CustomField>
    <fullName>DSALES_PDFpoliza__c</fullName>
    <description>Campo para compartir la URL de la póliza por correo a el cliente</description>
    <label>PDF póliza</label>
    <type>Url</type>
</CustomField>