force-app/main/default/objects/InsurancePolicy/fields/DSALES_Placas__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Placas__c</fullName>
    <label>Placas</label>
    <length>50</length>
    <type>Text</type>
</CustomField>