force-app/main/default/objects/InsurancePolicy/fields/DSALES_Polizaenviada__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Polizaenviada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Nos indica si la póliza completa ya fue enviada a NPV</description>
    <label>Póliza enviada</label>
    <type>Checkbox</type>
</CustomField>