force-app/main/default/objects/InsurancePolicy/fields/DSALES_Prima_Neta__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Prima_Neta__c</fullName>
    <label>Prima Neta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>