force-app/main/default/objects/InsurancePolicy/fields/DSALES_Prima_total__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Prima_total__c</fullName>
    <label>Prima total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>