force-app/main/default/objects/InsurancePolicy/fields/DSALES_Productoadquirido__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Productoadquirido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para ingresar el producto que adquirió el cliente</description>
    <label>Producto adquirido</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Pólizas</relationshipLabel>
    <relationshipName>P_lizas</relationshipName>
    <type>Lookup</type>
</CustomField>