force-app/main/default/objects/InsurancePolicy/fields/DSALES_RFC__c.field-meta.xml
<CustomField>
    <fullName>DSALES_RFC__c</fullName>
    <description>Campo para ingresar el RFC del asegurado</description>
    <label>R.F.C</label>
    <length>13</length>
    <type>Text</type>
</CustomField>