force-app/main/default/objects/InsurancePolicy/fields/DSALES_Servicio__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Servicio__c</fullName>
    <label>Servicio</label>
    <length>50</length>
    <type>Text</type>
</CustomField>