force-app/main/default/objects/InsurancePolicy/fields/DSALES_Telefono__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Telefono__c</fullName>
    <formula>SourceQuote.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Teléfono</label>
    <type>Text</type>
</CustomField>