force-app/main/default/objects/InsurancePolicy/fields/DSALES_Tipodepersona__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Tipodepersona__c</fullName>
    <description>Campo para el tipo de persona</description>
    <label>Tipo de persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Física</fullName>
            </value>
            <value>
                <fullName>Moral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>