force-app/main/default/objects/InsurancePolicy/fields/DSALES_Tipovehiculo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Tipovehiculo__c</fullName>
    <formula>TEXT(SourceQuote.DSALES_Tipodevehculo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de vehículo</label>
    <type>Text</type>
</CustomField>