force-app/main/default/objects/InsurancePolicy/fields/DSALES_VigenciacumplidaSM__c.field-meta.xml
<CustomField>
    <fullName>DSALES_VigenciacumplidaSM__c</fullName>
    <formula>DATEVALUE( ExpirationDate )= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vigencia cumplida</label>
    <type>Checkbox</type>
</CustomField>