force-app/main/default/objects/InsurancePolicy/fields/Prueba_no_migrar__c.field-meta.xml
<CustomField>
    <fullName>Prueba_no_migrar__c</fullName>
    <formula>DATETIMEVALUE( TODAY() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prueba no migrar</label>
    <type>DateTime</type>
</CustomField>