force-app/main/default/objects/InsurancePolicy/listViews/Mis_p_lizas.listView-meta.xml
<ListView>
    <fullName>Mis_p_lizas</fullName>
    <columns>Name</columns>
    <columns>NameInsured</columns>
    <columns>ExpirationDate</columns>
    <columns>PremiumAmount</columns>
    <columns>Status</columns>
    <filterScope>Mine</filterScope>
    <label>Mis pólizas</label>
</ListView>